# telegram-olymptrade-signal-copier

./: .dockerignore  .env.example  .gitattributes  .gitignore  .graphify_uncached.txt  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: ci.yml
docs/: PRD.md  refactor.md  tool-idea.md
docs/superpowers/plans/: 2026-06-19-m0-scaffold.md  2026-06-19-m1-parser.md  2026-06-19-m2-state-machine.md  2026-06-20-m3-broker-protocol.md  2026-06-20-m4-database-infrastructure.md  2026-06-21-m5-telegram-listener.md  2026-06-21-m6-scheduler.md  2026-06-21-m7-telegram-dm-notifications.md  2026-06-21-m8-olymptrade-broker.md  2026-06-22-m9-end-to-end-soak.md  2026-06-23-m10-olymptrade-reconnect-supervisor.md  2026-06-23-m11-railway-deployment.md  2026-06-23-m12-type-and-format-cleanup.md  2026-06-26-channel-resolution-by-title.md  2026-06-30-preflight-cleanup-for-mt5-refactor.md  2026-07-01-m13-1-broker-protocol-config-rename.md  2026-07-01-m13-2-mt5-broker-impl.md
docs/superpowers/specs/: 2026-06-19-m0-scaffold-design.md  2026-06-19-m1-parser-design.md  2026-06-19-m2-state-machine-design.md  2026-06-20-m3-broker-protocol-design.md  2026-06-20-m4-database-infrastructure-design.md  2026-06-21-m5-telegram-listener-design.md  2026-06-21-m6-scheduler-design.md  2026-06-21-m7-telegram-dm-notifications-design.md  2026-06-21-m8-olymptrade-broker-design.md  2026-06-22-m9-end-to-end-soak-design.md  2026-06-23-m10-olymptrade-reconnect-supervisor-design.md  2026-06-23-m11-railway-deployment-design.md  2026-06-23-m12-type-and-format-cleanup-design.md  2026-06-26-channel-resolution-by-title-design.md  2026-07-01-m13-1-broker-protocol-config-rename-design.md  2026-07-01-m13-2-mt5-broker-impl-design.md
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: olymp_diag.py  olymp_diag_accounts.py  olymp_diag_pairs.py
src/olymptrade_ws/: VENDORED.md  __init__.py
src/olymptrade_ws/api/: balance.py  market.py  trade.py
src/olymptrade_ws/core/: client.py  connection.py  protocol.py
src/signal_copier/: __init__.py  __main__.py  config.py  recovery.py  replay.py
src/signal_copier/broker/: __init__.py  base.py  dry_run.py  mt5.py  olymp.py  reconnect.py
src/signal_copier/domain/: __init__.py  gale.py  signal.py  state.py
src/signal_copier/infra/: clock.py  db.py  db_rows.py  log.py  state_store.py
src/signal_copier/migrations/: 001_initial.sql
src/signal_copier/notify/: __init__.py  protocol.py  telegram_dm.py
src/signal_copier/scheduler/: __init__.py  trigger.py
src/signal_copier/telegram/: __init__.py  auth.py  channel_resolver.py  client.py  listener.py
tests/: _broker_fixtures.py  _scheduler_fixtures.py  _telegram_fixtures.py  conftest.py  test_auth.py  test_broker_protocol.py  test_channel_resolver.py  test_clock.py  test_config.py  test_db.py  test_dry_run_broker.py  test_gale_math.py  test_log.py  test_main.py  test_main_imports_clean.py  test_mt5_broker.py  test_mt5_broker_stub.py  test_mt5_preflight.py  test_notifier.py  test_olymp_broker.py  test_olymp_broker_recorded.py  test_parser.py  test_reconnect.py  test_reconnect_supervisor.py  test_recording_notifier_protocol.py  test_recovery.py  test_replay.py  test_scheduler.py  test_soak_assertions.py  test_state_machine.py  test_telegram_client.py  test_telegram_dm.py  test_telegram_listener.py
tests/fixtures/: olymp_e26_sample.json
tests/fixtures/soak_recordings/: soak_24h.json  soak_short.json
tools/: __init__.py  mt5_preflight.py  soak.py  soak_assertions.py
