[project]
name = "signal-copier"
version = "0.1.0"
description = "Telegram → OlympTrade signal copier (demo only, v1)"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "Owner" }]
dependencies = [
    "pydantic-settings>=2.6",  # M2: config layer (D-3)
    "tzdata>=2024.1",          # IANA tz database on Windows; no-op on Linux/macOS
    "asyncpg>=0.30",           # M4: async-native PostgreSQL driver (PRD §6, R-13)
]

[project.scripts]
signal-copier = "signal_copier.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_copier"]

[tool.hatch.build.targets.wheel.force-include]
"migrations" = "signal_copier/migrations"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "testcontainers[postgresql]>=4.8",  # M4: spin up real PG per test session
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["src/olymptrade_ws", "OlympTradeAPI"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.13"
exclude = ["src/olymptrade_ws"]

[[tool.mypy.overrides]]
# Tests use Pydantic private APIs (_env_file), untyped **kwargs helpers, and
# rely on mypy-not-knowable narrowing (e.g. transition() returning a state the
# caller then asserts is non-None). Keep src strict; relax tests only.
module = ["test_config", "test_db", "test_gale_math", "test_main", "test_parser", "test_state_machine"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --ignore=OlympTradeAPI"
