[project]
name = "signal-copier"
version = "0.1.0"
description = "Telegram → OlympTrade signal copier (demo only, v1)"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "Owner" }]
dependencies = [
    "pydantic-settings>=2.6",  # M2: config layer
    "tzdata>=2024.1",          # IANA tz database on Windows
    "asyncpg>=0.30",           # M4: async PostgreSQL driver
    "telethon>=1.44",          # M5: Telegram MTProto user-account client
    "loguru>=0.7,<1.0",        # M7: rotating loguru sinks + DM mirror
    "websockets>=16.0",
]

[project.scripts]
signal-copier      = "signal_copier.__main__:main"
signal-copier-auth = "signal_copier.telegram.auth:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_copier"]

[tool.hatch.build.targets.wheel.force-include]
"migrations" = "signal_copier/migrations"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "testcontainers[postgresql]>=4.8",  # M4: spin up real PG per test session
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["src/olymptrade_ws", "OlympTradeAPI"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.13"
exclude = ["src/olymptrade_ws"]

[[tool.mypy.overrides]]
# Telethon ships without a py.typed marker, so mypy treats its imports as Any
# and surfaces "missing library stubs" for every transitive import. The wrapper
# in src/signal_copier/telegram/ validates config + handles FloodWaitError;
# no telethon type contracts leak into the rest of the codebase.
module = [
    "telethon",
    "telethon.errors",
    "telethon.events",
    "telethon.sessions",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Tests use Pydantic private APIs (_env_file), untyped **kwargs helpers, and
# rely on mypy-not-knowable narrowing (e.g. transition() returning a state the
# caller then asserts is non-None). Keep src strict; relax tests only.
module = [
    "test_config", "test_db", "test_gale_math", "test_main", "test_parser",
    "test_state_machine",
    "test_clock", "test_log", "test_auth",
    "test_telegram_client", "test_telegram_listener",
    "test_scheduler", "test_notifier",  # M6: NEW
    "test_olymp_broker", "test_olymp_broker_recorded",  # M8: NEW
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --ignore=OlympTradeAPI"
