[project]
name = "signal-copier"
version = "0.2.0"
description = "Telegram → MT5 signal copier (demo only, v1)"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "PolyForm Strict 1.0.0" }
authors = [{ name = "Owner" }]
dependencies = [
    "pydantic-settings>=2.6",  # M2: config layer
    "tzdata>=2024.1",          # IANA tz database on Windows
    "asyncpg>=0.30",           # M4: async PostgreSQL driver
    "telethon>=1.44",          # M5: Telegram MTProto user-account client
    "loguru>=0.7,<1.0",        # M7: rotating loguru sinks + DM mirror
]

[project.scripts]
signal-copier      = "signal_copier.__main__:main"
signal-copier-auth = "signal_copier.telegram.auth:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_copier"]


[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "testcontainers[postgresql]>=4.8",  # M4: spin up real PG per test session
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["OlympTradeAPI"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.13"

[[tool.mypy.overrides]]
# Telethon ships without a py.typed marker, so mypy treats its imports as Any
# and surfaces "missing library stubs" for every transitive import. The wrapper
# in src/signal_copier/telegram/ validates config + handles FloodWaitError;
# no telethon type contracts leak into the rest of the codebase.
module = [
    "telethon",
    "telethon.errors",
    "telethon.events",
    "telethon.sessions",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# asyncpg and testcontainers don't ship py.typed markers. test_db.py and
# conftest.py use these for integration tests with real PostgreSQL containers;
# the codebase wraps them in our own typed Database class, so the lack of
# upstream stubs doesn't leak into the rest of the codebase.
module = [
    "asyncpg",
    "asyncpg.exceptions",
    "testcontainers",
    "testcontainers.postgres",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers -m 'not slow'"
markers = [
    "slow: marks tests as slow (run explicitly with 'pytest -m slow')",
]

